docs: AWS EKS 학습 놀이터 계획 문서화 - 2026-07-13 확정 방향 기록 (#266)